# cs_tournament_bot

./: .env.example  Dockerfile  consts.py  docker-compose.yaml  loader.py  main.py  pyproject.toml  requirements.txt
data/: config.py
filters/: __init__.py  is_admin.py  is_agreed.py  is_verified.py  with_team.py
handlers/: __init__.py
handlers/admin/: __init__.py  menu.py
handlers/users/: __init__.py  cancel.py  help.py  questionnaire.py  start.py  team.py  tournament.py
keyboards/inline/: admin.py  back.py  cancel.py  menu.py  tournament.py  tournament_register.py
keyboards/reply/: tournament_register.py
services/: api_client.py  redis_handler.py  user_registry.py
states/: __init__.py  broadcast.py  questionnaire.py
